--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,6 +16,8 @@
           <select id="model" name="model">
             <option value="model1">Model 1</option>
             <option value="model2">Model 2</option>
+            <option value="model3">Model 3</option>
+            <option value="model4">Model 4</option>
           </select>
         </div>
 
